[package]
name = "html_sanitize"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A macro based HTML sanitizer to add to structs so they can be sanitised before storage or transmission"
homepage = "https://github.com/crunchy234/html_sanitize"
repository = "https://github.com/crunchy234/html_sanitize"
keywords = ["html", "sanitize", "macro", "derive"]
categories = ["web-programming"]

[dependencies]
ammonia = "4.0.0"
html_sanitize_derive = { version = "0.1.0", path = "html_sanitize_derive" }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.107"

[workspace]
members = [
    "html_sanitize_derive",
    "tests"
]
