[package]
name = "html_sanitize_derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Derive macro for html_sanitize"
homepage = "https://github.com/crunchy234/html_sanitize"
repository = "https://github.com/crunchy234/html_sanitize"
keywords = ["html", "sanitize", "macro", "derive"]
categories = ["web-programming"]

[lib]
proc-macro = true

[dependencies]
ammonia = "4.0.0"
proc-macro2 = "1.0.60"
quote = "1.0.23"
syn = "2.0.18"
proc-macro-crate = "3.2.0"